--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeOrange">
+        android:theme="@style/Theme.AppCompat">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop">
